--- a/panel.html
+++ b/panel.html
@@ -70,7 +70,7 @@
                 <option value="Design">Design</option>
                 <option value="Marketing">Marketing</option>
             </select>
-            <input type="submit" class="form-control mt-3 btn btn-dark fs-4" value="Submit">
+            <input type="submit" class="form-control mt-3 btn btn-dark fs-4" value="Add">
             </form>
         </section>
         <section id="staff-get-section" class="mt-5">
